--- a/src/app/data-table/table/data-table.component.html
+++ b/src/app/data-table/table/data-table.component.html
@@ -1,14 +1,72 @@
-<div class="table-responsive">
-    <table class="table table-striped table-bordered">
-        <thead>
-            <tr>
-                <th *ngFor="let column of columns" id="{{column.value}}">{{column.header}}</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let row of data">
-                <td *ngFor="let column of columns">{{row[column.value]}}</td>
-            </tr>
-        </tbody>
-    </table>
+<div class="card">
+    <div class="card-header">Datatable</div>
+    <div class="card-body datatable-padd">
+
+        <!-- row for table header -->
+        <div class="row">
+            <div class="col-sm-12 col-md-6 datatable_length">
+                <span>Show </span>
+                <label>
+                    <select class="form-control form-control-sm">
+                            <option *ngFor="let count of perPageCountDropdown" value="{{count}}">{{count}}</option>
+                    </select>
+                </label>
+                <span> records</span>
+            </div>
+            <div class="col-sm-12 col-md-6"></div>
+        </div>
+        <!-- row for table header ends-->
+        <!-- table data -->
+        <div class="row">
+            <div class="table-responsive">
+                <table class="table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th><input type="checkbox" class="checkbox checkbox-primary"></th>
+                            <th *ngFor="let column of columns" id="{{column.value}}">
+                                <div>
+                                    {{column.header}}
+                                </div>
+                            </th>
+                        </tr>
+                        <tr>
+                            <th></th>
+                            <th *ngFor="let column of columns" id="{{column.value}}">
+                                <div *ngIf="column.sort=='true'">
+                                    <input style="display: block" type="text" placeholder="Search {{column.header}}" id="search_{{column.value}}">
+                                </div>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let row of tableData">
+                            <td><input type="checkbox" class="checkbox checkbox-primary"></td>
+                            <td *ngFor="let column of columns">{{row[column.value]}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <!-- table data ends -->
+
+        <!-- pagination and other footer controls -->
+        <div class="row">
+            <div class="col-sm-12 col-md-6 clear-padding">
+                <span>Showing 1 to 10 of 57 enteries</span>
+            </div>
+            <div class="col-sm-12 col-md-6">
+                <div class="float-right">
+                    <ul class="pagination">
+                        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item active"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- pagination and other footer controls ends -->
+    </div>
+
 </div>
