--- a/src/app/data-table/table/data-table.component.html
+++ b/src/app/data-table/table/data-table.component.html
@@ -7,7 +7,7 @@
             <div class="col-sm-12 col-md-6 datatable_length">
                 <span>Show </span>
                 <label>
-                    <select class="form-control form-control-sm">
+                    <select class="form-control form-control-sm" (change)="perPageCountChange()" [(ngModel)]="perPageRecords">
                             <option *ngFor="let count of perPageCountDropdown" value="{{count}}">{{count}}</option>
                     </select>
                 </label>
@@ -54,19 +54,21 @@
             <div class="col-sm-12 col-md-6 clear-padding">
                 <span>Showing 1 to 10 of 57 enteries</span>
             </div>
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-6 clear-padding">
                 <div class="float-right">
                     <ul class="pagination">
-                        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item active"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                        <li class="page-item" id="prev" (click)="prev()"><a class="page-link"><i class="fa fa-angle-double-left"></i></a></li>
+                        <ng-container *ngFor="let item of pageArray">
+                            <li class="page-item" [ngClass]="item == currentPage ? 'active' : ''" id="{{item}}" (click)="onPageChange(item)"><a class="page-link">{{item}}</a></li>
+                        </ng-container>
+                        <li class="page-item" id="next" (click)="next()"><a class="page-link"><i class="fa fa-angle-double-right"></i></a></li>
                     </ul>
+                    <div>
+                        Showing {{first}} to {{last}} of total {{totalPages}} pages
+                    </div>
                 </div>
             </div>
         </div>
         <!-- pagination and other footer controls ends -->
     </div>
-
 </div>
