added page limit change code

--- a/src/app/data-table/table/data-table.component.html
+++ b/src/app/data-table/table/data-table.component.html
@@ -52,7 +52,7 @@
         <!-- pagination and other footer controls -->
         <div class="row">
             <div class="col-sm-12 col-md-6 clear-padding">
-                <span>Showing 1 to 10 of 57 enteries</span>
+                <span>Showing {{showingFrom + 1}} to {{showingTo}} of {{totalRecords}} enteries</span>
             </div>
             <div class="col-sm-12 col-md-6 clear-padding">
                 <div class="float-right">
