--- a/src/app/mydata/mydata.component.html
+++ b/src/app/mydata/mydata.component.html
@@ -1,8 +1,8 @@
 <div style="padding: 50px;">
     <data-table [data]="dataToSend">
-        <column [value]="'name'" [header]="'Name'" [sort]="'true'"></column>
-        <column [value]="'age'" [header]="'Age'" [sort]="'true'"></column>
-        <column [value]="'contact'" [header]="'Contact'" [sort]="'true'"></column>
-        <column [value]="'department'" [header]="'Department'" [sort]="'true'"></column>
+        <column [value]="'name'" [header]="'Name'" [search]="'true'"></column>
+        <column [value]="'age'" [header]="'Age'" [search]="'true'"></column>
+        <column [value]="'contact'" [header]="'Contact'" [search]="'true'"></column>
+        <column [value]="'department'" [header]="'Department'" [search]="'true'"></column>
     </data-table>
 </div>
