--- a/src/app/mydata/mydata.component.html
+++ b/src/app/mydata/mydata.component.html
@@ -1,5 +1,5 @@
 <div style="padding: 50px;">
-    <data-table [data]="dataToSend" [title]="'Datatable'">
+    <data-table [data]="dataToSend" [actions]="['EDIT','DELETE']" (rowSelect)="onRowSelect($event)">
         <column [value]="'name'" [header]="'Name'" [sort]="true" [search]="true"></column>
         <column [value]="'age'" [header]="'Age'" [sort]="true" [search]="true"></column>
         <column [value]="'contact'" [header]="'Contact'" [sort]="true" [search]="true"></column>
